Name:                   gloss-accelerate
Version:                1.7.8.0
Synopsis:               Extras to interface Gloss and Accelerate
Description:            Extras to interface Gloss and Accelerate
License:                BSD3
License-file:           LICENSE
Author:                 Trevor L. McDonell
Maintainer:             tmcdonell@cse.unsw.edu.au
Category:               Graphics
Build-type:             Simple
Cabal-version:          >=1.10

Flag cuda
  Description:          Enable the CUDA parallel backend for NVIDIA GPUs
  Default:              True


Library
  Exposed-modules:
        Graphics.Gloss.Accelerate.Render
        Graphics.Gloss.Accelerate.Data.Color
        Graphics.Gloss.Accelerate.Data.Picture
        Graphics.Gloss.Accelerate.Data.Point

  Build-depends:
        base                    == 4.6.*,
        accelerate              >= 0.14,
        gloss                   == 1.7.8.*

  if flag(cuda)
    cpp-options:                -DACCELERATE_CUDA_BACKEND
    Build-depends:
        accelerate-cuda         >= 0.14

  ghc-options:
        -Wall -O2

-- vim: nospell
