Name:                   gloss-accelerate
Version:                2.1.0.0
Synopsis:               Extras to interface Gloss and Accelerate
Description:            Extras to interface Gloss and Accelerate
License:                BSD3
License-file:           LICENSE
Author:                 Trevor L. McDonell
Maintainer:             Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
Category:               Graphics
Build-type:             Simple
Cabal-version:          >=1.10

extra-source-files:
    README.md

Library
  Exposed-modules:
        Graphics.Gloss.Accelerate.Data.Picture
        Graphics.Gloss.Accelerate.Data.Point

  Build-depends:
        base                    >= 4.9 && < 5
      , accelerate              >= 1.3
      , gloss                   >= 1.9
      , gloss-rendering         >= 1.9
      , linear-accelerate       >= 0.7

  ghc-options:
        -Wall
        -O2

  default-language:
        Haskell2010

  hs-source-dirs:
        src

source-repository head
  type:                         git
  location:                     https://github.com/tmcdonell/gloss-accelerate

source-repository this
  type:                         git
  tag:                          v2.1.0.0
  location:                     https://github.com/tmcdonell/gloss-accelerate

-- vim: nospell
